Adjusted white space to fix content grouping

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -36,6 +36,10 @@ body {
   background-color: rgba(15, 18, 27, 1);
 }
 
+.row-fullscreen {
+  padding-bottom:70px;
+}
+
 /* NAVIGATION BAR */
 
 nav {
